AI-JADEDEVS4/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AI_Solution_Expertise__c</fullName>
        <label>AI Solution Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Connectors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APAC__c</fullName>
        <description>This field used for CSM Rules to assign the CSM based on Region(Ex: EMEA,APAC,NA,..)</description>
        <formula>CONTAINS(&quot;BD:BT:IO:BN:KH:CN:HK:IN:ID:JP:KP:KR:LA:MO:MV:MY:MN:MM:NP:PK:PG:PH:SG:LK:TW:TH:TL:VN&quot;,BillingCountry)</formula>
        <label>APAC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_18_Digit_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account 18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_CSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account CSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Notes__c</fullName>
        <label>Account Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Overdue_Balance__c</fullName>
        <label>Account Overdue Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Profile__c</fullName>
        <formula>Owner.Profile_Formula_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Rating_New__c</fullName>
        <inlineHelpText>Script writes Account Rating from Account Usage Scorecard onto this field</inlineHelpText>
        <label>Account Rating</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <inlineHelpText>Strategic Account is a Customer that has one of the following:
Lower dollar value now, high upsell potential (e.g. subsidiary of a large parent)
Total recurring revenue of 50K or above
Brand/Recognizable Name</inlineHelpText>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner &amp; Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Terminated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adaptive_Address__c</fullName>
        <formula>IF(TEXT(Adaptive_Contracting_Entity__c)=&apos;Adaptive Insights, Inc.&apos;,&apos;3350 W Bayshore Rd #200,Palo Alto,CA,94303,United States&apos;,

IF(TEXT(Adaptive_Contracting_Entity__c)=&apos;Adaptive Insights Pty Ltd&apos;,&apos;Level 1,7 Clunies Ross Court,Eight Mile Plains, Brisbane,QLD 4113,Australia&apos;,

IF(TEXT(Adaptive_Contracting_Entity__c)=&apos;Adaptive Insights Limited&apos;,&apos;Avaland House,110 London Road, Apsley, Hemel Hempstead,Hertfordshire,HP3 9SD,United Kingdom&apos;,

IF(TEXT(Adaptive_Contracting_Entity__c)=&apos;Adaptive Insights, Ltd.&apos;,&apos;Suite 2600,Three Bentall Centre,595 Burrard Street,PO Box 49314,Vancouver,BC,Canada V7X 1L3&apos;,NULL))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adaptive Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adaptive_Contracting_Entity__c</fullName>
        <label>Adaptive Contracting Entity</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptive Insights, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Insights Pty Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Insights, Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Insights Limited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adaptive_Industry__c</fullName>
        <label>Adaptive Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Profit Organization Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace &amp; Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture, Forestry, Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking, Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business, Professional, &amp; Technical Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction, Architecture &amp; Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy &amp; Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare &amp; Social Assistance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality, Gaming, Hotel, Restaurants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining, Oil &amp; Gas Extraction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonprofits, Charities, Foundations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaceuticals, Biotech, Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing, Media, Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate, Leasing &amp; Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation &amp; Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waste Management, Recycling, Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adaptive_PS_Notes__c</fullName>
        <description>Channels request to add this field to better track PS progress</description>
        <inlineHelpText>PS: Implementation Notes</inlineHelpText>
        <label>Adaptive PS Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adaptive_Revenue__c</fullName>
        <description>If you disagree with the revenue from Data.com, please update this field with the correct revenue number and Sales Ops will review.</description>
        <label>Sales Reported Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adaptive_Signature__c</fullName>
        <label>Adaptive Signature</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adaptive_Subsidiary_Address__c</fullName>
        <label>Adaptive Subsidiary Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adaptive_Subsidiary__c</fullName>
        <label>Adaptive Subsidiary</label>
        <picklist>
            <picklistValues>
                <fullName>US Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK subsidiary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adaptive_Support_Rep__c</fullName>
        <inlineHelpText>Grab Zendesk field, Assignee, and write that value onto this field</inlineHelpText>
        <label>Adaptive Support Rep</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Terms__c</fullName>
        <label>Additional Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Enrollment_Fee__c</fullName>
        <description>This field used to populate value  on partner enrollment  form</description>
        <label>Annual Enrollment Fee</label>
        <picklist>
            <picklistValues>
                <fullName>$4,000 USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000 CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000 AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>£3000 GBP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budgeted_Project__c</fullName>
        <label>Budgeted Project</label>
        <picklist>
            <picklistValues>
                <fullName>Needs Justification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Development__c</fullName>
        <description>This field is mapped to Relayware</description>
        <label>Business Development</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bypass_Assignment_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, assignment rules are not executed.</description>
        <inlineHelpText>When checked, assignment rules are not executed.</inlineHelpText>
        <label>Bypass Assignment Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_CSM_Rules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass CSM Rules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_New__c</fullName>
        <globalPicklist>test_CRM</globalPicklist>
        <label>CRM New</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CRM_System__c</fullName>
        <label>CRM</label>
        <picklist>
            <picklistValues>
                <fullName>Microsoft Dynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netsuite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle - Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle - PeopleSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle-RightNow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle - Siebel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SugarCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sage</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CSM_Email__c</fullName>
        <label>CSM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CSM_Manager_Email__c</fullName>
        <label>CSM Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cancels_Implementation_Status__c</fullName>
        <label>Cancels: Implementation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Implemented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cancels_Under_AP_Control_or_Influence__c</fullName>
        <inlineHelpText>This field indicates if the primary cancellation reason is APs span of control</inlineHelpText>
        <label>Cancels: Under AP Control or Influence</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Celigo_Billing_Contact_Email__c</fullName>
        <description>Created by Celigo. It will be populated by workflow field update from Opportunity.
Workflow:</description>
        <label>Celigo Billing Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Reference__c</fullName>
        <inlineHelpText>Information pulled from project close</inlineHelpText>
        <label>Client Reference?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Count__c</fullName>
        <inlineHelpText>BETA Field: Count all the number of closed won opps.</inlineHelpText>
        <label>Closed Won: Count</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Commission_Type__c</fullName>
        <description>USED IN CELIGO SCRIPT: On Partner&apos;s paper means Partner pays Adaptive, On Adaptive&apos;s paper means Customer pays Adaptive, On Adaptive&apos;s paper w/ 1-time referral means Customer pays Adaptive, and No Commission is used in rare cases such as no partner.</description>
        <inlineHelpText>This is Opp Sales Partner acc. On Partner&apos;s paper means Partner pays Adaptive, On Adaptive&apos;s paper means Customer pays Adaptive, On Adaptive&apos;s paper w/ 1-time referral means Customer pays Adaptive, &amp; No Commission is used in rare cases such as no partner.</inlineHelpText>
        <label>Old Partner Commission Type</label>
        <picklist>
            <picklistValues>
                <fullName>On Partner&apos;s paper ongoing commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Adaptive&apos;s paper ongoing commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Adaptive&apos;s paper one-time commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-time first year commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One-time full commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing full commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <picklist>
            <picklistValues>
                <fullName>A3 Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaplan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argus Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axiom EPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackbaud ABM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Maestro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERP Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FISERV Vantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Cognos Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Cognos TM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFOR CPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jedox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KCI Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Forecaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft FRx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Management Reporter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>o9 Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OneStream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle HFM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Hyperion Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle PBCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Consulting__c</fullName>
        <description>This field is mapped to Relayware</description>
        <label>Consulting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Address__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDA Contract Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counter_Signer_Email__c</fullName>
        <formula>Counter_Signer_User__r.Email</formula>
        <label>Counter-Signer Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counter_Signer_First_Name__c</fullName>
        <formula>Counter_Signer_User__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter-Signer First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counter_Signer_Last_Name__c</fullName>
        <formula>Counter_Signer_User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter-Signer Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counter_Signer_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for docusign counter sign process</description>
        <label>Counter-Signer User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa (USA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua And Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia &amp; Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>To view the currency type (USD,CAD..)</description>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <inlineHelpText>To view the currency type (USD,CAD..)</inlineHelpText>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_ARR__c</fullName>
        <label>Current ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Budgeting_Tool__c</fullName>
        <label>Incumbent Solution</label>
        <picklist>
            <picklistValues>
                <fullName>3ESI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3 Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acorn Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alight Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anaplan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applix/TM1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argus Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axiom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Active Planner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI360/Solver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackbaud AMB (Powerplan)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Maestro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BudgetPak/XLerant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cartesis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clarity Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FISERV/Vantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRX Forecaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Grown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyperion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyperion Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyperion Pillar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Signed__c</fullName>
        <inlineHelpText>Channel use</inlineHelpText>
        <label>Current Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_GL_Other__c</fullName>
        <label>Other ERP</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>